<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">会议记录</string>
    
    <string name="login_title">登  陆</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密     码</string>
    <string name="login_input_hint">盛大通行证/手机/邮箱</string>
    <string name="login_mobilenum">手机号一键登陆</string>
    
    <string name="str_err_nosd">请插入SD卡</string>
    <string name="common_title">会议记录</string>
    <string name="common_return">返回</string>
    <string name="common_over">完成</string>
    <string name="common_no_over">未完成</string>
</resources>
